# TopLinguagens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yaml
app/: loader.py
app/classes/: vagas.py
data/: arq_locais.parquet  arq_tecnologias.parquet  arq_vagas.parquet
notebook/: aux.ipynb
tests/: test_vagas.py
toplinguagens/: app.py  loader.py
toplinguagens/classes/: vagas.py
