[project]
name = "toplinguagens"
version = "0.1.0"
description = ""
authors = [
    {name = "Bergsmf",email = "bergsmf@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "ruff (>=0.11.13,<0.12.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
